Switch time estimation finishing touches

--- a/Fig5/Make Pop Model/Find_switching_times_tohigh.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tohigh.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# set up jax\n",
     "from jax.lib import xla_bridge\n",
-    "jax.config.update('jax_platform_name', 'cpu')\n",
+    "jax.config.update('jax_platform_name', 'gpu')\n",
     "jax.config.update(\"jax_enable_x64\", True)\n",
     "print(xla_bridge.get_backend().platform)\n",
     "\n",
@@ -184,7 +184,7 @@
     "tau = 5e-7  # simulation time step\n",
     "tau_odestep = 5e-7  # number of ODE integration steps in a single tau-leap step (smaller than tau)\n",
     "tau_savetimestep = 1e-2  # save time step a multiple of tau\n",
-    "key_seeds=np.arange(300,310,1)#np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
+    "key_seeds=np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
     "key_seeds_no_xtra=key_seeds.copy()  # same number of trajectories for the case with the xtra gene absent\n",
     "tau_leap_sim_duration=10 # duration of the tau-leap simulation (h)"
    ],
