--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -407,10 +407,8 @@
     "print('Number of samples:',N)\n",
     "print('')\n",
     "print('Sampling time interval for high-to-low switch times:',T)\n",
-    "high_to_low_mle=find_mle(high_to_low_switch_times,N,T) # maximum likelihood estimate\n",
-    "high_to_low_leftconfint, high_to_low_rightconfint=np.array(find_confint(high_to_low_mle,N,T,0.05)) # 95% confidence interval\n",
-    "print('High-to-low switch times MLE:',high_to_low_mle)\n",
-    "print('High-to-low switch times 95% confidence interval:',high_to_low_leftconfint, high_to_low_rightconfint)"
+    "high_to_low_mle=mle_numswitch_alone(high_to_low_switch_times,N,T) # find the estimate as outlined in Bartholomew 1963 based on number of switchings alone\n",
+    "print('High-to-low switch times MLE:',high_to_low_mle)"
    ],
    "outputs": [],
    "execution_count": null
@@ -604,10 +602,8 @@
     "print('Number of samples:',N)\n",
     "print('')\n",
     "print('Sampling time interval for high-to-low switch times:',T)\n",
-    "high_to_low_mle_no_xtra=find_mle(high_to_low_switch_times_no_xtra,N,T) # maximum likelihood estimate\n",
-    "high_to_low_leftconfint_no_xtra, high_to_low_rightconfint_no_xtra=np.array(find_confint(high_to_low_mle_no_xtra,N,T,0.05)) # 95% confidence interval\n",
-    "print('High-to-low switch times MLE:',high_to_low_mle_no_xtra)\n",
-    "print('High-to-low switch times 95% confidence interval:',high_to_low_leftconfint_no_xtra, high_to_low_rightconfint_no_xtra)"
+    "high_to_low_mle_no_xtra=mle_numswitch_alone(high_to_low_switch_times_no_xtra,N,T) # find the estimate as outlined in Bartholomew 1963 based on number of switchings alone\n",
+    "print('High-to-low switch times MLE:',high_to_low_mle_no_xtra)"
    ],
    "outputs": [],
    "execution_count": null
