--- a/Fig5/Make Pop Model/Find_fall_times.ipynb
+++ b/Fig5/Make Pop Model/Find_fall_times.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# set up jax\n",
     "from jax.lib import xla_bridge\n",
-    "jax.config.update('jax_platform_name', 'cpu')\n",
+    "jax.config.update('jax_platform_name', 'gpu')\n",
     "jax.config.update(\"jax_enable_x64\", True)\n",
     "print(xla_bridge.get_backend().platform)\n",
     "\n",
@@ -192,7 +192,7 @@
     "tau = 5e-7  # simulation time step\n",
     "tau_odestep = 5e-7  # number of ODE integration steps in a single tau-leap step (smaller than tau)\n",
     "tau_savetimestep = 1e-2  # save time step a multiple of tau\n",
-    "key_seeds=np.arange(0,10,1)#np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
+    "key_seeds=np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
     "key_seeds_no_xtra=key_seeds.copy()  # same number of trajectories for the case with the xtra gene absent\n",
     "tau_leap_sim_duration=10 # duration of the tau-leap simulation (h)"
    ],
@@ -822,7 +822,7 @@
     "# in the case of fall times, construct sampling time interval artificially and artificially censor the sample\n",
     "T_low_to_zero_no_xtra=tau_leap_sim_duration - max(high_to_low_fall_times_no_xtra) # shortest-possible time interval\n",
     "low_to_zero_fall_times_no_xtra[low_to_zero_fall_times_no_xtra>=T_low_to_zero_no_xtra]=0 # artificially censor the sample\n",
-    "print('Arificially constructed sampling time interval for low-to-zero fall times:',T_low_to_zero)\n",
+    "print('Arificially constructed sampling time interval for low-to-zero fall times:',T_low_to_zero_no_xtra)\n",
     "\n",
     "low_to_zero_mle_no_xtra=find_mle(low_to_zero_fall_times_no_xtra,N,T_low_to_zero_no_xtra) # maximum likelihood estimate\n",
     "low_to_zero_leftconfint_no_xtra, low_to_zero_rightconfint_no_xtra=np.array(find_confint(low_to_zero_mle_no_xtra,N,T_low_to_zero_no_xtra,0.05)) # 95% confidence interval\n",
