--- a/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
+++ b/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
@@ -907,7 +907,7 @@
     "# in the case of fall times, construct sampling time interval artificially and artificially censor the sample\n",
     "T_low_to_zero_no_xtra=tau_leap_sim_duration - max(high_to_low_fall_times_no_xtra) # shortest-possible time interval\n",
     "low_to_zero_fall_times_no_xtra[low_to_zero_fall_times_no_xtra>=T_low_to_zero_no_xtra]=0 # artificially censor the sample\n",
-    "print('Arificially constructed sampling time interval for low-to-zero fall times:',T_low_to_zero)\n",
+    "print('Arificially constructed sampling time interval for low-to-zero fall times:',T_low_to_zero_no_xtra)\n",
     "\n",
     "low_to_zero_mle_no_xtra=find_mle(low_to_zero_fall_times_no_xtra,N,T_low_to_zero_no_xtra) # maximum likelihood estimate\n",
     "low_to_zero_leftconfint_no_xtra, low_to_zero_rightconfint_no_xtra=np.array(find_confint(low_to_zero_mle_no_xtra,N,T_low_to_zero_no_xtra,0.05)) # 95% confidence interval\n",
