All toggle switch simulations should be completed

--- a/Fig3/Fig3.ipynb
+++ b/Fig3/Fig3.ipynb
@@ -217,7 +217,7 @@
     "tf_pun = (25,50+savetimestep/2) # time frame for simulation after punisher comes online\n",
     "# scenario 1: mutating a toggle\n",
     "tf_mut=(50,85+savetimestep/2)\n",
-    "# scenario 2: flipping a toggle with an inducer pulse\n",
+    "# scenario 2: flipping both toggles with an inducer pulse\n",
     "tf_pulse = (50,50.75+savetimestep/2) # time frame for inducer pulse that flips the toggle\n",
     "tf_afterpulse = (50.75,85+savetimestep/2) # time frame for simulation after the pulse\n",
     "\n",
@@ -238,7 +238,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# SIMULATE THE MUTATION OF ONE TOGGLE\n",
+    "# SIMULATE THE MUTATION OF \n",
     "\n",
     "par_onemut = par.copy()\n",
     "\n",
@@ -452,7 +452,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# SIMULATE THE FLIPPING OF ONE TOGGLE\n",
+    "# SIMULATE THE FLIPPING OF BOTH TOGGLES\n",
     "\n",
     "par_flip = par.copy()\n",
     "\n",
@@ -532,7 +532,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# ONE TOGGLE FLIPPED - PLOTS\n",
+    "# BOTH TOGGLES FLIPPED - PLOTS\n",
     "\n",
     "# TOGGLE PROTEIN LEVELS\n",
     "flip_togprot_figure = bkplot.figure(\n",
