--- a/FigS6/FigS6.ipynb
+++ b/FigS6/FigS6.ipynb
@@ -1216,6 +1216,81 @@
     }
    ],
    "execution_count": 27
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# initialise the array of switching times\n",
+    "ac_fracs_same_threshold_times=par['p_switch_ac_frac'] / (1 + cellvars['chi_switch']) * (1 + (cellvars['chi_switch']/dswitch_default) * dswitch_range_times)\n",
+    "cross_times = np.zeros_like(dswitch_range_times)\n",
+    "\n",
+    "# cycle through all parameter combinations\n",
+    "for comb_cntr in range(0, len(dswitch_range_times)):\n",
+    "    print('Simulating for d_switch = ', dswitch_range_times[comb_cntr])\n",
+    "    \n",
+    "    # copy system parameters from the default set\n",
+    "    par_timescales = par.copy()\n",
+    "    par_timescales['k_sxf'] = 0.0  # ignore integrase action\n",
+    "    cellvars_timescales = cellvars.copy()\n",
+    "    # set the parameters of the system to the combination considered\n",
+    "    par_timescales['p_switch_ac_frac'] = ac_fracs_same_threshold_times[comb_cntr]\n",
+    "    par_timescales['d_switch'] = dswitch_range_times[comb_cntr]\n",
+    "    cellvars_timescales['chi_switch'] = (cellvars['chi_switch']/dswitch_default) * par_timescales['d_switch']\n",
+    "\n",
+    "    # get the border between the equilibria's basins of attraction\n",
+    "    border = find_basin_border(par_timescales, cellvars_timescales)\n",
+    "\n",
+    "    # simulate the loss of the burdensome gene\n",
+    "    # initial simulation to get the steady state without gene expression loss\n",
+    "    p_switch_ac_frac = par_timescales['p_switch_ac_frac']\n",
+    "    par_timescales['p_switch_ac_frac'] = 0.0  # set the burdensome gene expression to present\n",
+    "    sol=ode_sim(par_timescales,    # dictionary with model parameters\n",
+    "                ode_with_circuit,   #  ODE function for the cell with synthetic circuit\n",
+    "                cellmodel_auxil.x0_from_init_conds(init_conds,circuit_genes,circuit_miscs),  # initial condition VECTOR\n",
+    "                len(circuit_genes), len(circuit_miscs), circuit_name2pos, # dictionaries with circuit gene and miscellaneous specie names, species name to vector position decoder\n",
+    "                cellmodel_auxil.synth_gene_params_for_jax(par_timescales,circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "                tf_nopun, jnp.arange(tf_nopun[0], tf_nopun[1], savetimestep_preloss), # time frame and time axis for saving the system's state\n",
+    "                rtol, atol, # relative and absolute tolerances\n",
+    "                solver=Heun()   # Heun solver for faster simulations\n",
+    "                )    \n",
+    "    ts_nopun=np.array(sol.ts)\n",
+    "    xs_nopun=np.array(sol.ys)\n",
+    "    par_timescales['p_switch_ac_frac'] = p_switch_ac_frac  # set the burdensome gene expression back to present\n",
+    "    sol=ode_sim(par_timescales,    # dictionary with model parameters\n",
+    "                ode_with_circuit,   #  ODE function for the cell with synthetic circuit\n",
+    "                xs_nopun[-1,:],  # initial condition VECTOR\n",
+    "                len(circuit_genes), len(circuit_miscs), circuit_name2pos, # dictionaries with circuit gene and miscellaneous specie names, species name to vector position decoder\n",
+    "                cellmodel_auxil.synth_gene_params_for_jax(par_timescales,circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "                tf_pun, jnp.arange(tf_pun[0], tf_pun[1], savetimestep_preloss), # time frame and time axis for saving the system's state\n",
+    "                rtol, atol, # relative and absolute tolerances\n",
+    "                solver=Heun()   # Heun solver for faster simulations\n",
+    "                )    \n",
+    "    ts_preloss=np.array(sol.ts)\n",
+    "    xs_preloss=np.array(sol.ys)\n",
+    "\n",
+    "    # simulating mutation of one toggle switch\n",
+    "    x0_afterloss=sol.ys[-1,:]  # simulation will resume from the last time point\n",
+    "    par_timescales['func_tog11'] = 0.0  # set the burdensome gene expression to zero\n",
+    "    par_timescales['func_tog12'] = 0.0  # set the burdensome gene expression to zero\n",
+    "    sol=ode_sim(par_timescales,    # dictionary with model parameters\n",
+    "                ode_with_circuit,   #  ODE function for the cell with synthetic circuit\n",
+    "                x0_afterloss,  # initial condition VECTOR\n",
+    "                len(circuit_genes), len(circuit_miscs), circuit_name2pos, # dictionaries with circuit gene and miscellaneous specie names, species name to vector position decoder\n",
+    "                cellmodel_auxil.synth_gene_params_for_jax(par_timescales,circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "                tf_afterloss, jnp.arange(tf_afterloss[0], tf_afterloss[1], savetimestep_afterloss), # time frame and time axis for saving the system's state\n",
+    "                rtol, atol, # relative and absolute tolerances\n",
+    "                solver=Heun()   # Heun solver for faster simulations\n",
+    "                )    \n",
+    "    ts_afterloss = np.array(sol.ts)\n",
+    "    xs_afterloss = np.array(sol.ys)\n",
+    "\n",
+    "    # get the first time point where p_switch crosses the border\n",
+    "    cross_times[comb_cntr] = ts_afterloss[np.argwhere(xs_afterloss[:,circuit_name2pos['p_switch']] > border)[0][0]]-ts_afterloss[0]"
+   ],
+   "id": "d5d8e73f2446dc20"
   }
  ],
  "metadata": {
