--- a/Fig5/Make Pop Model/Find_switching_times_tohigh.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tohigh.ipynb
@@ -100,11 +100,11 @@
     "\n",
     "# load synthetic gene circuit\n",
     "ode_with_circuit, circuit_F_calc, par, init_conds, circuit_genes, circuit_miscs, circuit_name2pos, circuit_styles, circuit_v = cellmodel_auxil.add_circuit(\n",
-    "    circuits.punisher_xtra_initialise,\n",
-    "    circuits.punisher_xtra_ode,\n",
-    "    circuits.punisher_xtra_F_calc,\n",
+    "    circuits.punisher_b_initialise,\n",
+    "    circuits.punisher_b_ode,\n",
+    "    circuits.punisher_b_F_calc,\n",
     "    par, init_conds,\n",
-    "    circuit_v=circuits.punisher_xtra_v)  # load the circuit"
+    "    circuit_v=circuits.punisher_b_v)  # load the circuit"
    ],
    "outputs": [],
    "execution_count": 25
@@ -121,8 +121,8 @@
     "# PARAMETERISE THE CIRCUIT\n",
     "\n",
     "# BURDENSOME SYNTHETIC GENE\n",
-    "par['c_xtra'] = 1\n",
-    "par['a_xtra'] = 1e5\n",
+    "par['c_b'] = 1\n",
+    "par['a_b'] = 1e5\n",
     "\n",
     "# PUNISHER\n",
     "# switch gene conc\n",
@@ -185,7 +185,7 @@
     "tau_odestep = 5e-7  # number of ODE integration steps in a single tau-leap step (smaller than tau)\n",
     "tau_savetimestep = 1e-2  # save time step a multiple of tau\n",
     "key_seeds=np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
-    "key_seeds_no_xtra=key_seeds.copy()  # same number of trajectories for the case with the xtra gene absent\n",
+    "key_seeds_no_b=key_seeds.copy()  # same number of trajectories for the case with the xtra gene absent\n",
     "tau_leap_sim_duration=10 # duration of the tau-leap simulation (h)"
    ],
    "metadata": {
@@ -213,9 +213,9 @@
     "            'xi_a': xis['a'], 'xi_r': xis['r'], 'xi_other_genes': xis['other'], 'xi_cat': xis['cat'],\n",
     "            'xi_switch_max': xis['switch (max)'], 'xi_int_max': xis['int (max)'], 'xi_prot': xis['prot'],\n",
     "            # protein degradation correction factors for the switch protein and the integrase\n",
-    "            'P_switch': Ps['switch'], 'P_int': Ps['int']}\n",
+    "            'chi_switch': Ps['switch'], 'chi_int': Ps['int']}\n",
     "xi_total = xis['a'] + xis['r'] + xis['other'] + xis['cat'] + xis['switch (max)'] + xis['int (max)'] + xis['prot'] # total burden\n",
-    "xi_no_xtra = xi_total - xis['other'] # burden without the burdensome gene"
+    "xi_no_b = xi_total - xis['other'] # burden without the burdensome gene"
    ],
    "metadata": {
     "collapsed": false,
@@ -232,7 +232,7 @@
    "source": [
     "# DEFINE SWITCH STATES FOR ALL GENES PRESENT\n",
     "# greatest possible p_switch level - for zero extra burden so that it's max across all conditions\n",
-    "p_switch_upper_bound = np.ceil(cellvars['xi_switch_max'] * (1/(1+cellvars['P_switch'])) / (\n",
+    "p_switch_upper_bound = np.ceil(cellvars['xi_switch_max'] * (1/(1+cellvars['chi_switch'])) / (\n",
     "        cellvars['xi_switch_max'] + cellvars['xi_int_max'] + cellvars['xi_prot'] + cellvars['xi_cat'] + cellvars['xi_a'] + cellvars['xi_r']\n",
     "        ) * par['M'] * (1 - par['phi_q']) / par['n_switch'])  # upper bound for p_switch (to get the high equilibrium)\n",
     "\n",
@@ -548,11 +548,11 @@
    "source": [
     "# THE CASE WITH XTRA GENE MUTATED\n",
     "\n",
-    "par_no_xtra=par.copy() # parameters for the case with the xtra gene absent\n",
-    "par_no_xtra['func_xtra']=0.0 # xtra gene concentration\n",
+    "par_no_b=par.copy() # parameters for the case with the xtra gene absent\n",
+    "par_no_b['func_b']=0.0 # xtra gene concentration\n",
     "\n",
-    "cellvars_no_xtra=cellvars.copy() # cellular variables for the case with the xtra gene absent\n",
-    "cellvars_no_xtra['xi_xtra']=0 # no  burdensome gene"
+    "cellvars_no_b=cellvars.copy() # cellular variables for the case with the xtra gene absent\n",
+    "cellvars_no_b['xi_b']=0 # no  burdensome gene"
    ],
    "outputs": [],
    "execution_count": 38
@@ -572,12 +572,12 @@
     "p_switches=np.arange(0,p_switch_upper_bound+0.1,1)\n",
     "\n",
     "# define function for calculating the squared difference between the required and actual F values\n",
-    "sqdiff_no_xtra = lambda p_switch: (F_real_calc(p_switch, par_no_xtra) - F_req_calc(p_switch, xi_no_xtra, par_no_xtra, cellvars_no_xtra)) ** 2\n",
+    "sqdiff_no_b = lambda p_switch: (F_real_calc(p_switch, par_no_b) - F_req_calc(p_switch, xi_no_b, par_no_b, cellvars_no_b)) ** 2\n",
     "\n",
     "# find the squared differences\n",
     "sqdiffs=np.zeros_like(p_switches)\n",
     "for i in range(0,len(p_switches)):\n",
-    "    sqdiffs[i]=sqdiff_no_xtra(p_switches[i])\n",
+    "    sqdiffs[i]=sqdiff_no_b(p_switches[i])\n",
     "\n",
     "# find the local minima and maxima in squared differences\n",
     "loc_minima=[]\n",
@@ -597,8 +597,8 @@
     "# based on our prior findings, with burden present we expect one stable equilibrium, one pseudo-equilibrium and one local maximum in squared differences\n",
     "# this corresponds to three local minima and two local maxima in the squared difference between F values\n",
     "if (len(loc_minima)==2 and len(loc_maxima)==1):\n",
-    "    p_switch_high_no_xtra=loc_minima[1] # REDEFINE high state standing for high-concentration stable equilibrium\n",
-    "    print('High state representative p_switch:',p_switch_high_no_xtra)\n",
+    "    p_switch_high_no_b=loc_minima[1] # REDEFINE high state standing for high-concentration stable equilibrium\n",
+    "    print('High state representative p_switch:',p_switch_high_no_b)\n",
     "else:\n",
     "    print('Something weird is going on')"
    ],
@@ -626,10 +626,10 @@
    "source": [
     "# INTEGRASE CONCENTRATIONS FROM SWITCH PROTEIN CONCENTRATIONS\n",
     "\n",
-    "p_int_low_no_xtra=p_int_low # low state integrase concentration is the same as the low state is reused\n",
-    "p_int_high_no_xtra=pint_from_pswitch_and_xi(p_switch_high_no_xtra,xis['a'] + xis['r'] + xis['cat'] + xis['prot'],par_no_xtra, cellvars_no_xtra)\n",
-    "print('Integrase concentration at low state:',p_int_low_no_xtra)\n",
-    "print('Integrase concentration at high state:',p_int_high_no_xtra)"
+    "p_int_low_no_b=p_int_low # low state integrase concentration is the same as the low state is reused\n",
+    "p_int_high_no_b=pint_from_pswitch_and_xi(p_switch_high_no_b,xis['a'] + xis['r'] + xis['cat'] + xis['prot'],par_no_b, cellvars_no_b)\n",
+    "print('Integrase concentration at low state:',p_int_low_no_b)\n",
+    "print('Integrase concentration at high state:',p_int_high_no_b)"
    ],
    "outputs": [
     {
@@ -649,9 +649,9 @@
     "# GET DETERMINISTIC STEADY STATE\n",
     "\n",
     "# taken from the case with burden\n",
-    "ts_det_no_xtra=ts_det.copy()\n",
-    "xs_det_no_xtra=xs_det.copy()\n",
-    "det_steady_x_no_xtra=det_steady_x.copy()"
+    "ts_det_no_b=ts_det.copy()\n",
+    "xs_det_no_b=xs_det.copy()\n",
+    "det_steady_x_no_b=det_steady_x.copy()"
    ],
    "metadata": {
     "collapsed": false,
@@ -676,34 +676,34 @@
     "\n",
     "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
     "# IMPORTANT: switch states assumed to be the same between the cases with and without the xtra gene\n",
-    "sc_low_to_high_no_xtra=lambda x, next_x: switch_condition_rise(x,next_x,0.9*p_int_high_no_xtra,circuit_name2pos['p_int']) # low to (new) high switching\n",
+    "sc_low_to_high_no_b=lambda x, next_x: switch_condition_rise(x,next_x,0.9*p_int_high_no_b,circuit_name2pos['p_int']) # low to (new) high switching\n",
     "\n",
-    "tf_hybrid_no_xtra = (ts_det_no_xtra[-1], ts_det_no_xtra[-1] + tau_leap_sim_duration)  # simulation time frame\n",
-    "mRNA_count_scales_no_xtra, S_no_xtra, x0_tauleap_no_xtra, circuit_synpos2genename_no_xtra, keys0_no_xtra = tauleap_sim_prep(par_no_xtra, len(circuit_genes),\n",
+    "tf_hybrid_no_b = (ts_det_no_b[-1], ts_det_no_b[-1] + tau_leap_sim_duration)  # simulation time frame\n",
+    "mRNA_count_scales_no_b, S_no_b, x0_tauleap_no_b, circuit_synpos2genename_no_b, keys0_no_b = tauleap_sim_prep(par_no_b, len(circuit_genes),\n",
     "                                                                                    len(circuit_miscs),\n",
-    "                                                                                    circuit_name2pos, det_steady_x_no_xtra,\n",
-    "                                                                                    key_seeds=key_seeds_no_xtra)   \n",
+    "                                                                                    circuit_name2pos, det_steady_x_no_b,\n",
+    "                                                                                    key_seeds=key_seeds_no_b)   \n",
     "\n",
-    "low_to_high_switch_times_no_xtra_since_stochastart_no_xtra, _, \\\n",
-    "            final_keys_hybrid_no_xtra = tauleap_sim_switch(par_no_xtra,  # dictionary with model parameters\n",
+    "low_to_high_switch_times_no_b_since_stochastart_no_b, _, \\\n",
+    "            final_keys_hybrid_no_b = tauleap_sim_switch(par_no_b,  # dictionary with model parameters\n",
     "                                                    circuit_v,  # circuit reaction propensity calculator\n",
-    "                                                    x0_tauleap_no_xtra, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
+    "                                                    x0_tauleap_no_b, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
     "                                                    len(circuit_genes), len(circuit_miscs),\n",
     "                                                    circuit_name2pos,\n",
-    "                                                    cellmodel_auxil.synth_gene_params_for_jax(par_no_xtra,\n",
+    "                                                    cellmodel_auxil.synth_gene_params_for_jax(par_no_b,\n",
     "                                                                                       circuit_genes), # synthetic gene parameters for calculating k values\n",
-    "                                                    tf_hybrid_no_xtra, tau, tau_odestep, tau_savetimestep, # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
-    "                                                    mRNA_count_scales_no_xtra, S_no_xtra, circuit_synpos2genename_no_xtra, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
-    "                                                    keys0_no_xtra, # starting random number genereation key\n",
-    "                                                    sc_low_to_high_no_xtra, sc_unnecessary\n",
+    "                                                    tf_hybrid_no_b, tau, tau_odestep, tau_savetimestep, # simulation parameters: time frame, tau leap step size, number of ode integration steps in a single tau leap step\n",
+    "                                                    mRNA_count_scales_no_b, S_no_b, circuit_synpos2genename_no_b, # mRNA count scaling factor, stoichiometry matrix, synthetic gene number in list of synth. genes to name decoder\n",
+    "                                                    keys0_no_b, # starting random number genereation key\n",
+    "                                                    sc_low_to_high_no_b, sc_unnecessary\n",
     "                                                    )\n",
     "\n",
     "# record switching times in numpy arrays\n",
-    "low_to_high_switch_times_no_xtra=np.array(low_to_high_switch_times_no_xtra_since_stochastart_no_xtra) # we need times of falling to zero since REACHING THE LOW STATE\n",
+    "low_to_high_switch_times_no_b=np.array(low_to_high_switch_times_no_b_since_stochastart_no_b) # we need times of falling to zero since REACHING THE LOW STATE\n",
     "\n",
-    "print('Low-to-high switch times:',low_to_high_switch_times_no_xtra)\n",
+    "print('Low-to-high switch times:',low_to_high_switch_times_no_b)\n",
     "\n",
-    "del final_keys_hybrid_no_xtra"
+    "del final_keys_hybrid_no_b"
    ],
    "outputs": [
     {
@@ -733,10 +733,10 @@
     "print('Number of samples:',N)\n",
     "print('')\n",
     "print('Sampling time interval for low-to-high switch times:',T)\n",
-    "high_to_low_mle_no_xtra=find_mle(low_to_high_switch_times_no_xtra,N,T) # maximum likelihood estimate\n",
-    "high_to_low_leftconfint_no_xtra, high_to_low_rightconfint_no_xtra=np.array(find_confint(high_to_low_mle_no_xtra,N,T,0.05)) # 95% confidence interval\n",
-    "print('Low-to-high switch times MLE:',high_to_low_mle_no_xtra)\n",
-    "print('Low-to-high switch times 95% confidence interval:',high_to_low_leftconfint_no_xtra, high_to_low_rightconfint_no_xtra)"
+    "high_to_low_mle_no_b=find_mle(low_to_high_switch_times_no_b,N,T) # maximum likelihood estimate\n",
+    "high_to_low_leftconfint_no_b, high_to_low_rightconfint_no_b=np.array(find_confint(high_to_low_mle_no_b,N,T,0.05)) # 95% confidence interval\n",
+    "print('Low-to-high switch times MLE:',high_to_low_mle_no_b)\n",
+    "print('Low-to-high switch times 95% confidence interval:',high_to_low_leftconfint_no_b, high_to_low_rightconfint_no_b)"
    ],
    "outputs": [
     {
@@ -765,16 +765,16 @@
     "                                   y_axis_label='Frequency',\n",
     "                                   width=400,height=300)\n",
     "# get numpy histogram\n",
-    "ft_htl_hist_noburden, ftl_htl_edges_noburden=np.histogram(low_to_high_switch_times_no_xtra,bins=hist_bins,density=False)\n",
+    "ft_htl_hist_noburden, ftl_htl_edges_noburden=np.histogram(low_to_high_switch_times_no_b,bins=hist_bins,density=False)\n",
     "# plot histogram\n",
     "falltime_htl_hist_noburden.quad(top=ft_htl_hist_noburden, bottom=0,\n",
     "                              left=ftl_htl_edges_noburden[:-1], right=ftl_htl_edges_noburden[1:],\n",
     "                            color='magenta')\n",
     "# mark mean fall time\n",
-    "falltime_htl_hist_noburden.add_layout(bkmodels.Span(location=high_to_low_mle_no_xtra, dimension='height',\n",
+    "falltime_htl_hist_noburden.add_layout(bkmodels.Span(location=high_to_low_mle_no_b, dimension='height',\n",
     "                                              line_dash='dashed', line_color='navy', line_width=2, line_alpha=0.5))\n",
     "# mark 95% confidence interval for fall times\n",
-    "falltime_htl_hist_noburden.add_layout(bkmodels.BoxAnnotation(left=high_to_low_leftconfint_no_xtra, right=high_to_low_rightconfint_no_xtra,\n",
+    "falltime_htl_hist_noburden.add_layout(bkmodels.BoxAnnotation(left=high_to_low_leftconfint_no_b, right=high_to_low_rightconfint_no_b,\n",
     "                                                       fill_color='navy', fill_alpha=0.1)) # range\n",
     "\n",
     "# show plot\n",
@@ -826,7 +826,7 @@
     "\n",
     "# save the switching times\n",
     "saved_switchtimes={'low_to_high_switch_times_withburden':low_to_high_switch_times,\n",
-    "                   'low_to_high_switch_times_no_xtra':low_to_high_switch_times_no_xtra}\n",
+    "                   'low_to_high_switch_times_no_b':low_to_high_switch_times_no_b}\n",
     "np.save('low_to_high_switch_times_withburden.npy',saved_switchtimes)"
    ],
    "outputs": [],
