Toggle switch improvement (fixed)

--- a/FigS6/FigS6.ipynb
+++ b/FigS6/FigS6.ipynb
@@ -1397,7 +1397,7 @@
    "cell_type": "code",
    "source": [
     "# PLOT THE SWITCHING THRESHOLDS\n",
-    "thresholds_for_ac_frac_figure = bkplot.figure(\n",
+    "thresholds_for_ac_frac_figure= bkplot.figure(\n",
     "    frame_width=200,\n",
     "    frame_height=125,\n",
     "    x_axis_label=\"I (share of inducer-bound switch proteins)\",\n",
