Small changes (finalising scripts)

--- a/FigS2S3/FigS3.ipynb
+++ b/FigS2S3/FigS3.ipynb
@@ -12,7 +12,7 @@
    },
    "source": [
     "'''\n",
-    "Notebook for FIGS3 - Unwanted effects of synthetic addiction on cells with toggle switch mutations (compared to having only toggle switches in the cell)\n",
+    "Notebook for FIGS3 - Unwanted effects of essenstial gene co-expression on cells with toggle switch circuits(compared to having only toggle switches in the cell)\n",
     "'''\n",
     "# By Kirill Sechkar\n",
     "\n",
@@ -553,7 +553,7 @@
     "onemut_togprot_figure = bkplot.figure(\n",
     "    frame_width=200,\n",
     "    frame_height=125,\n",
-    "    title=\"Toggle switches with addiction\",\n",
+    "    title=\"Toggle switches with co-expression\",\n",
     "    x_axis_label=\"Time since mutation, h\",\n",
     "    y_axis_label=\"Protein conc., nM\",\n",
     "    x_range=(-5, tf_mut[1] - tf_mut[0]),\n",
@@ -612,7 +612,7 @@
     "onemut_grcat_figure = bkplot.figure(\n",
     "    frame_width=200,\n",
     "    frame_height=125,\n",
-    "    title=\"Toggle switches with addiction\",\n",
+    "    title=\"Toggle switches with co-expression\",\n",
     "    x_axis_label=\"Time since mutation, h\",\n",
     "    y_axis_label=\"Relative cell growth rate\",\n",
     "    x_range=(-5, tf_mut[1] - tf_mut[0]),\n",
