--- a/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
+++ b/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
@@ -106,10 +106,12 @@
     "init_conds = cellmodel_auxil.default_init_conds(par)  # get default initial conditions\n",
     "\n",
     "# load synthetic gene circuit\n",
-    "ode_with_circuit, circuit_F_calc, par, init_conds, circuit_genes, circuit_miscs, circuit_name2pos, circuit_styles, circuit_v = cellmodel_auxil.add_circuit(\n",
+    "ode_with_circuit, circuit_F_calc, circuit_eff_m_het_div_k_het,\\\n",
+    "    par, init_conds, circuit_genes, circuit_miscs, circuit_name2pos, circuit_styles, circuit_v = cellmodel_auxil.add_circuit(\n",
     "    circuits.punisher_b_initialise,\n",
     "    circuits.punisher_b_ode,\n",
     "    circuits.punisher_b_F_calc,\n",
+    "    circuits.punisher_b_eff_m_het_div_k_het,\n",
     "    par, init_conds,\n",
     "    circuit_v=circuits.punisher_b_v)  # load the circuit"
    ],
@@ -213,9 +215,10 @@
     "\n",
     "# get the cellular variables in steady state without burden\n",
     "e, F_r, h, xis, Ps = values_for_analytical(par, ode_with_circuit, init_conds,\n",
-    "                                          circuit_genes, circuit_miscs,\n",
-    "                                          circuit_name2pos,\n",
-    "                                          circuit_F_calc)\n",
+    "                                           circuit_genes, circuit_miscs,\n",
+    "                                           circuit_name2pos,\n",
+    "                                           circuit_F_calc,\n",
+    "                                           circuit_eff_m_het_div_k_het)\n",
     "# record the cellular variables\n",
     "cellvars = {'e': e, 'F_r': F_r, # translation elongation rate and ribosome trnscription regulation\n",
     "            'h': h, # intacellular chlorampenicol concentration\n",
@@ -311,9 +314,10 @@
     "\n",
     "# get the cellular variables in steady state without burden\n",
     "e, F_r, h, xis_noprot, Ps_noprot = values_for_analytical(par_noprot, ode_with_circuit, init_conds,\n",
-    "                                          circuit_genes, circuit_miscs,\n",
-    "                                          circuit_name2pos,\n",
-    "                                          circuit_F_calc)\n",
+    "                                                         circuit_genes, circuit_miscs,\n",
+    "                                                         circuit_name2pos,\n",
+    "                                                         circuit_F_calc,\n",
+    "                                                         circuit_eff_m_het_div_k_het)\n",
     "# record the cellular variables\n",
     "cellvars_noprot = {'e': e, 'F_r': F_r, # translation elongation rate and ribosome trnscription regulation\n",
     "            'h': h, # intacellular chlorampenicol concentration\n",
@@ -511,6 +515,7 @@
     "high_to_low_fall_times_since_stochstart, low_to_zero_fall_times_since_stochstart, \\\n",
     "            final_keys_hybrid = tauleap_sim_switch(par_noprot_no_switch,  # dictionary with model parameters\n",
     "                                                    circuit_v,  # circuit reaction propensity calculator\n",
+    "                                                    circuit_eff_m_het_div_k_het,  # calculate total effective mRNa conc./k value for all synthetic genes\n",
     "                                                    x0_tauleap, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
     "                                                    len(circuit_genes), len(circuit_miscs),\n",
     "                                                    circuit_name2pos,\n",
@@ -847,6 +852,7 @@
     "high_to_low_fall_times_no_b_since_stochastart_no_b, low_to_zero_fall_times_since_stochstart_no_b, \\\n",
     "            final_keys_hybrid_no_b = tauleap_sim_switch(par_noprot_no_b_no_switch,  # dictionary with model parameters\n",
     "                                                    circuit_v,  # circuit reaction propensity calculator\n",
+    "                                                    circuit_eff_m_het_div_k_het,  # calculate total effective mRNa conc./k value for all synthetic genes\n",
     "                                                    x0_tauleap_no_b, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
     "                                                    len(circuit_genes), len(circuit_miscs),\n",
     "                                                    circuit_name2pos,\n",
