--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -106,10 +106,12 @@
     "init_conds = cellmodel_auxil.default_init_conds(par)  # get default initial conditions\n",
     "\n",
     "# load synthetic gene circuit\n",
-    "ode_with_circuit, circuit_F_calc, par, init_conds, circuit_genes, circuit_miscs, circuit_name2pos, circuit_styles, circuit_v = cellmodel_auxil.add_circuit(\n",
+    "ode_with_circuit, circuit_F_calc, circuit_eff_m_het_div_k_het,\\\n",
+    "    par, init_conds, circuit_genes, circuit_miscs, circuit_name2pos, circuit_styles, circuit_v = cellmodel_auxil.add_circuit(\n",
     "    circuits.punisher_b_initialise,\n",
     "    circuits.punisher_b_ode,\n",
     "    circuits.punisher_b_F_calc,\n",
+    "    circuits.punisher_b_eff_m_het_div_k_het,\n",
     "    par, init_conds,\n",
     "    circuit_v=circuits.punisher_b_v)  # load the circuit"
    ],
@@ -211,9 +213,10 @@
    "source": [
     "# get the cellular variables in steady state without burden\n",
     "e, F_r, h, xis, Ps = values_for_analytical(par, ode_with_circuit, init_conds,\n",
-    "                                          circuit_genes, circuit_miscs,\n",
-    "                                          circuit_name2pos,\n",
-    "                                          circuit_F_calc)\n",
+    "                                           circuit_genes, circuit_miscs,\n",
+    "                                           circuit_name2pos,\n",
+    "                                           circuit_F_calc,\n",
+    "                                           circuit_eff_m_het_div_k_het)\n",
     "# record the cellular variables\n",
     "cellvars = {'e': e, 'F_r': F_r, # translation elongation rate and ribosome trnscription regulation\n",
     "            'h': h, # intacellular chlorampenicol concentration\n",
@@ -372,6 +375,7 @@
     "high_to_low_switch_times_since_stochstart, _, \\\n",
     "            final_keys_hybrid = tauleap_sim_switch(par,  # dictionary with model parameters\n",
     "                                                    circuit_v,  # circuit reaction propensity calculator\n",
+    "                                                    circuit_eff_m_het_div_k_het, # calculate the total effective mRNA conc./k value for all synthetic genes\n",
     "                                                    x0_tauleap, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
     "                                                    len(circuit_genes), len(circuit_miscs),\n",
     "                                                    circuit_name2pos,\n",
@@ -569,6 +573,7 @@
     "high_to_low_switch_times_no_b_since_stochastart_no_b, _, \\\n",
     "            final_keys_hybrid_no_b = tauleap_sim_switch(par_no_b,  # dictionary with model parameters\n",
     "                                                    circuit_v,  # circuit reaction propensity calculator\n",
+    "                                                    circuit_eff_m_het_div_k_het, # calculate the total effective mRNA conc./k value for all synthetic genes\n",
     "                                                    x0_tauleap_no_b, # initial condition VECTOR (processed to make sure random variables are appropriate integers)\n",
     "                                                    len(circuit_genes), len(circuit_miscs),\n",
     "                                                    circuit_name2pos,\n",
